# shs-cli

./: Cargo.toml  LICENSE  README.md
src/: encoding.rs  errors.rs  lib.rs  main.rs  shamir.rs
