[package]
name = "shs-cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for Shamir's Secret Sharing — split secrets into n shares, reconstruct from any t"
license = "MIT"
repository = "https://github.com/HansujaB/sss-cli"
readme = "README.md"
keywords = ["shamir", "secret-sharing", "threshold", "cryptography", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hex = "0.4"
thiserror = "2"
anyhow = "1"